objects/ASI_HK_CRM_Pre_Approval_Form_Mechanic__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_A_C_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>A/C Code</label>
        <referenceTo>ASI_MFM_A_C_Code__c</referenceTo>
        <relationshipLabel>Pre-Approval Form Mechanics</relationshipLabel>
        <relationshipName>Pre_Approval_Form_Mechanics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Adjustment_Name__c</fullName>
        <label>Adjustment Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Display_Name__c</fullName>
        <label>Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Exclude_from_Plan_Conversion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from Plan Conversion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_HK_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_HK_Adjustment_Name2_Chann_PAF__c</fullName>
        <description>For multi level goods</description>
        <label>Adjustment Name 2 - Channel PAF</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_HK_Adjustment_Name2_Cust_PAF__c</fullName>
        <description>For multi level Goods</description>
        <label>Adjustment Name 2 - Cust PAF</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_HK_Adjustment_Name_for_Chann_PAF__c</fullName>
        <label>Adjustment Name - Channel PAF</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_HK_Adjustment_Name_for_Cust_PAF__c</fullName>
        <label>Adjustment Name - Cust PAF</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_HK_Mechanics_subString__c</fullName>
        <formula>MID(Name,3,LEN(Name)-2)</formula>
        <label>Mechanics subString</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_HK_PAF_Report_Section__c</fullName>
        <label>Report Section</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Complementary Products</fullName>
                </value>
                <value>
                    <fullName>Corporate Social responsibility sponsorship</fullName>
                </value>
                <value>
                    <fullName>Customer&apos; staff training sponsorship</fullName>
                </value>
                <value>
                    <fullName>Design sponsorship</fullName>
                </value>
                <value>
                    <fullName>Event Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Exclusivity Sponsorship</fullName>
                </value>
                <value>
                    <fullName>On-Invoice Discount</fullName>
                </value>
                <value>
                    <fullName>Other sponsorship (if any)</fullName>
                </value>
                <value>
                    <fullName>Sales target, volume discount and volume rebate</fullName>
                </value>
                <value>
                    <fullName>Sales target and Customer&apos;s staff rebate</fullName>
                </value>
                <value>
                    <fullName>Visibility sponsorship and POS material</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_HK_Preference_for_Chan_PAF__c</fullName>
        <label>Preference - Channel PAF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_HK_Preference_for_Cust_PAF__c</fullName>
        <label>Preference - Cust PAF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Mechanic_Class__c</fullName>
        <label>Mechanic Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1達成獎勵及各項贊助 (年度/半年度/季度)</fullName>
                    <label>達成獎勵及各項贊助 (年度/半年度/季度)</label>
                </value>
                <value>
                    <fullName>2廣告陳列及品牌消費者活動</fullName>
                    <label>廣告陳列及品牌消費者活動</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_Mechanic_Category__c</fullName>
        <label>Mechanic Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Conditional</fullName>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Code__c</fullName>
        <label>Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_JDE_Account__c</fullName>
        <label>JDE Account</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Mechanic_Category__c</fullName>
        <label>Mechanic Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Variable</fullName>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Mechanic_Type__c</fullName>
        <label>Mechanic Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PAF Item - FOC</fullName>
                </value>
                <value>
                    <fullName>PAF Item - FOC Bulk</fullName>
                </value>
                <value>
                    <fullName>PAF Item - Variable</fullName>
                </value>
                <value>
                    <fullName>PAF Item - Fixed Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Resp_Department__c</fullName>
        <label>Resp. Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Pre-Approval Form Mechanic</label>
    <listViews>
        <fullName>ASI_CRM_TW_PAF_Mechanics</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_A_C_Code__c</columns>
        <columns>ASI_CRM_Mechanic_Class__c</columns>
        <columns>ASI_CRM_Display_Name__c</columns>
        <columns>ASI_CRM_Exclude_from_Plan_Conversion__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_HK_CRM_Pre_Approval_Form_Mechanic__c.ASI_CRM_TW_Pre_Approval_Mechanics</value>
        </filters>
        <label>TW PAF Mechanics</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_TW_Users</group>
            <group>ASI_CRM_VN_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_Code__c</columns>
        <columns>ASI_HK_CRM_Mechanic_Type__c</columns>
        <columns>ASI_HK_CRM_Mechanic_Category__c</columns>
        <columns>ASI_HK_CRM_Resp_Department__c</columns>
        <columns>ASI_HK_CRM_JDE_Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>TW_PAF_Mechanic</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_A_C_Code__c</columns>
        <columns>ASI_CRM_Mechanic_Class__c</columns>
        <columns>ASI_CRM_Display_Name__c</columns>
        <columns>ASI_CRM_Exclude_from_Plan_Conversion__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_HK_CRM_Pre_Approval_Form_Mechanic__c.ASI_CRM_TW_Pre_Approval_Mechanics</value>
        </filters>
        <label>TW PAF Mechanic</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_TW_Users</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>PAF Mechanic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pre-Approval Form Mechanics</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_TW_Pre_Approval_Mechanics</fullName>
        <active>true</active>
        <label>ASI CRM TW Pre-Approval Mechanics</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>